--- a/.abf.yml
+++ b/.abf.yml
@@ -1,4 +1,4 @@
 sources:
-  "luabibentry.doc.tar.xz": 0437a3003a2f92892bf339a9539731d338b80558
-  "luabibentry.source.tar.xz": 3a8cca63624975d891182291d96f08fe26926e88
-  "luabibentry.tar.xz": 05bf27ab16ede5eefa8f88877438d3fd016f9a5d
+  luabibentry.doc.tar.xz: acc9fa2f1e38a585cb83c50fc27aeb11d53087f7
+  luabibentry.source.tar.xz: 08954da1009ac2d9e8f494e691e7a13ddc0116f7
+  luabibentry.tar.xz: 2b3a7b3a38661670e57319675e4ee4970ee73912
