--- a/.abf.yml
+++ b/.abf.yml
@@ -1,4 +1,4 @@
 sources:
-  luabibentry.doc.tar.xz: acc9fa2f1e38a585cb83c50fc27aeb11d53087f7
-  luabibentry.source.tar.xz: 08954da1009ac2d9e8f494e691e7a13ddc0116f7
-  luabibentry.tar.xz: 2b3a7b3a38661670e57319675e4ee4970ee73912
+  luabibentry.doc.r55777.tar.xz: 2204f93b424e70d58c9554bb842f93e6cd231de9
+  luabibentry.r55777.tar.xz: fd1472dc59f70ac1a37686a333a98a5f22cdc61e
+  luabibentry.source.r55777.tar.xz: 09f37bd1be353954c9c4158e6d1d0f9bf5a37d75
